# duty_planner

./: .coverage  .coveragerc  .gitignore  Dockerfile.backend  Makefile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: ci.yaml
backend/: .env.example  Dockerfile.backend  db.sqlite3
backend/accounts/: adapters.py  admin.py  apps.py  models.py  serializers.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_alter_user_managers_alter_user_username.py  0003_invitation.py
backend/common_app/: apps.py
backend/common_app/migrations/: 0001_initial.py
backend/core/: asgi.py  local.py  settings.py  urls.py  wsgi.py
backend/core/settings/: base.py  local.py  production.py  settings.py
backend/db/: db.sqlite3
backend/planner/: admin.py  models.py  serializers.py  validators.py  views.py
backend/planner/migrations/: 0001_initial.py  0002_alter_daysoff_date_alter_duty_date_and_more.py  0003_dutyassignment_unique_user_duty.py  0004_staff_priority_gte_0.py
backend/planner/services/: calendar.py  (+4 more)
backend/tests/: README.md  conftest.py  test_business_logic.py  test_manage_assignments.py  test_models.py  test_planner.py  test_repositories.py  test_serializers.py  test_staff_availability.py  test_views.py
frontend/: Dockerfile.frontend  biome.json  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App_old.jsx  AuthCallback.jsx  DaysOffPicker.jsx  Login.jsx  ScheduleDatePicker.jsx  main.jsx  useAuth.js
nginx/: nginx.conf
(+8 files in other folders)
